# GQAssign

oracle-system/: README.md  docker-compose.yml
oracle-system/backend/: .env  .env.example  Cargo.toml  Dockerfile  run_backend.bat  setup.bat
oracle-system/backend/migrations/: 001_initial_schema.sql
oracle-system/backend/src/: api.rs  database.rs  main.rs  oracle_manager.rs  price_aggregator.rs  pyth_client.rs  switchboard_client.rs
oracle-system/programs/oracle-contract/: Cargo.toml  Dockerfile  build_and_deploy.bat
oracle-system/programs/oracle-contract/src/: lib.rs
